# daily-news

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
api/: cron.py  index.py  webhook.py
bot/: agent.py  archive.py  bot.py  config.py  digest.py  interests.md  interests.py  models.py  numbers.py  providers.py  rss.py  secrets.py  sources.py  sources.toml  surfcall_tools.py  telegram_api.py
docs/: ANALYSIS.md  PR-DRAFT.md  PRD.md
scripts/: set_webhook.py
tests/: conftest.py  test_agent.py  test_api_cron.py  test_api_index.py  test_api_webhook.py  test_archive.py  test_bot.py  test_config.py  test_digest.py  test_numbers.py  test_rss.py  test_secret_hygiene.py  test_secrets.py  test_sources.py  test_surfcall_tools.py  test_telegram_api.py
