[project]
name = "daily-news"
version = "0.1.0"
description = "Telegram bot delivering a daily curated news digest (NYT) filtered to personal/professional interests — an agent over the NYT API, powered by gecko-surf."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # The comprehension engine — makes the bot first-call-correct against the NYT API
    # without hand-writing a client.
    "gecko-surf>=0.4.7",
    # LLM provider (agent loop + comprehension pipeline).
    "anthropic>=0.40",
    # Telegram transport — plain HTTP calls (bot/telegram_api.py), not
    # python-telegram-bot: on Vercel the bot is two stateless serverless
    # functions (api/webhook.py, api/cron.py), not a long-running process, so
    # there's no event loop for PTB's async Application to live in and no use
    # for its JobQueue (Vercel Cron replaces that).
    "httpx>=0.27",
    # Loads `.env` into the process environment on startup — `uv run` does NOT
    # do this on its own (would otherwise need `uv run --env-file .env ...`
    # every time, easy to forget). No-ops harmlessly on Vercel (no `.env` file
    # deployed there; real env vars come from Vercel's project settings).
    "python-dotenv>=1.0",
    "feedparser>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
